app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-iot-run
  namespace: iotnamespace
  labels:
    name: myappiotimage
    app: myappiotimage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myappiotimage
  template:
    metadata:
      labels:
        app: myappiotimage
    spec:
      containers:
      - name: myappiotimage
        image: djsasha777/iotimage:9.0
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: iotnamespace
spec:
  selector:
    app: myappiotimage
  type: LoadBalancer
  ports:
  - name: myappserviceport
    protocol: TCP
    port: 8088
    targetPort: 8088
    nodePort: 30888
