iot-mongo-statefulset.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongodatabase

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodatabase
spec:
  serviceName: mongodb-headless
  podManagementPolicy: OrderedReady
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/component: mongodb
    spec:
      serviceAccountName: mongodb
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: mongodb
              namespaces:
              - mongodatabase
              topologyKey: kubernetes.io/hostname
            weight: 1
      securityContext:
        fsGroup: 1001
        sysctls: []
      containers:
      - name: mongodb
        image: docker.io/bitnami/mongodb:4.4.4
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        command:
        - /scripts/setup.sh
        ports:
        - containerPort: 27017
          name: mongodb
        livenessProbe:
          exec:
            command:
            - mongo
            - --disableImplicitSessions
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - bash
            - -ec
            - |
              mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: datadir
          mountPath: /bitnami/mongodb
          subPath:
        - name: scripts
          mountPath: /scripts/setup.sh
          subPath: setup.sh
      - name: metrics
        image: docker.io/bitnami/mongodb-exporter:0.11.2
        imagePullPolicy: "IfNotPresent"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        command:
        - /bin/bash
        - -ec
        args:
        - |
          /bin/mongodb_exporter --web.listen-address ":9216" --mongodb.uri "mongodb://root:$(echo $MONGODB_ROOT_PASSWORD | sed -r "s/@/%40/g;s/:/%3A/g")@localhost:27017/admin?"
        volumeMounts:
        ports:
        - name: metrics
          containerPort: 9216
        livenessProbe:
          httpGet:
            path: /
            port: metrics
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: metrics
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
          successThreshold: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: scripts
        configMap:
          name: mongodb-scripts
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: mongodatabase
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-arbiter
  namespace: mongodatabase
spec:
  serviceName: mongodb-arbiter-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/component: arbiter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/component: arbiter
    spec:
      serviceAccountName: mongodb
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: mongodb
              namespaces:
              - mongodatabase
              topologyKey: kubernetes.io/hostname
            weight: 1
      securityContext:
        fsGroup: 1001
        sysctls: []
      containers:
      - name: mongodb-arbiter
        image: docker.io/bitnami/mongodb:4.4.4
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 1001
        ports:
        - containerPort: 27017
          name: mongodb
        livenessProbe:
          tcpSocket:
            port: mongodb
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: mongodb
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-arbiter-headless
  namespace: mongodatabase
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: tcp-mongodb
    port: 27017
    targetPort: mongodb
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: arbiter

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-metrics
  namespace: mongodatabase
  labels:
    app.kubernetes.io/name: mongodb
spec:
  type: ClusterIP
  ports:
  - port: 9216
    targetPort: metrics
    protocol: TCP
    name: http-metrics
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
