mongo-express-stateless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-st
  labels:
    app: mongo-express-st
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-st
  template:
    metadata:
      labels:
        app: mongo-express-st
    spec:
      containers:
      - name: mongo-express-st
        image: mongo-express
        #command: [ "sleep" ]
        #args: [ "infinity" ]
        ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service-st
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
