mongo-pv.yaml
---
  apiVersion: "apps/v1"
  kind: "StatefulSet"
  metadata:
     name: "mongo-st"
     namespace: "iotnamespace"
  spec:
    serviceName: "mongo-st"
    replicas: 1
    selector:
      matchLabels:
        app: "mongo-st"
    template:
      metadata:
        labels:
           app: "mongo-st"
      spec:
        containers:
          -
            name: "mongo-st"
            image: "mongo"
            imagePullPolicy: "Always"
            ports:
              -
                containerPort: 27017
                name: "mongodb"

            volumeMounts:
              -
                name: "mongodb-persistent-storage"
                mountPath: "/data/db"
        volumes:
          -
            name: "mongodb-persistent-storage"
            persistentVolumeClaim:
              claimName: "mongodb-pvc-development"

---
  apiVersion: "v1"
  kind: "PersistentVolumeClaim"
  metadata:
    name: "mongodb-pvc-development"
    namespace: "iotnamespace"
    labels:
      app: "mongo-st"
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: gp2

---
  apiVersion: "v1"
  kind: "Service"
  metadata:
    name: "mongo-st"
    namespace: "iotnamespace"
    labels:
      app: "mongo-st"
  spec:
    ports:
      -
        name: "mongodb"
        port: 27017
        targetPort: 27017
    clusterIP: "None"
    selector:
      app: "mongo-st"
