mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: iotnamespace
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: iotnamespace
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployent
  namespace: iotnamespace
  labels:
    name: mymongo
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-volume
            mountPath: /var/mongo/data
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-volume

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: iotnamespace
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
