app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-iot-run
  labels:
    name: myappiotimage
    app: myappiotimage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myappiotimage
  template:
    metadata:
      labels:
        app: myappiotimage
    spec:
      containers:
      - name: myappiotimage
        image: djsasha777/iotimage:16
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    name: myappiotimage
    app: myappiotimage
spec:
  selector:
    app: myappiotimage
  type: LoadBalancer
  ports:
  - name: myappserviceport
    protocol: TCP
    port: 8088
    targetPort: 8088
    nodePort: 30888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  tls:
    - hosts:
      - djsashaiot.com
      secretName: app-secret
  rules:
  - host: "djsashaiot.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addrelay/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addsensor/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
