app_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: iotnamespace
spec:
  tls:
    - hosts:
      - djsashaiot.com
      secretName: app-secret
  rules:
  - host: "djsashaiot.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addrelay/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addsensor/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
